NTR - Fix grid gap

--- a/src/Administration/Resources/administration/src/app/component/media/sw-media-grid-base-item/sw-media-grid-base-item.less
+++ b/src/Administration/Resources/administration/src/app/component/media/sw-media-grid-base-item/sw-media-grid-base-item.less
@@ -13,7 +13,7 @@
 
 .sw-media-grid-base-item {
     position: relative;
-    padding: 10px;
+    padding: 15px 17.5px;
     color: @sw-media-grid-base-item-color;
 
     &:hover {
@@ -22,8 +22,8 @@
 
     .sw-context-button {
         position: absolute;
-        top: 15px;
-        right: 19px;
+        top: 20px;
+        right: 25px;
 
         .sw-context-button__button {
             height: 18px;
