--- a/src/Administration/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.less
+++ b/src/Administration/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.less
@@ -5,7 +5,7 @@
 @sw-media-grid-media-item-color-input-border:     @color-steam-cloud;
 @sw-media-grid-media-item-color-input:            @color-black;
 @sw-media-grid-media-item-color-input-background: @color-white;
-@sw-media-grid-media-item-pseudo-padding:         20px;
+@sw-media-grid-media-item-pseudo-padding:         25px;
 @sw-media-grid-media-item-color-selected:         @color-shopware-blue;
 @sw-media-grid-color-checkmark:                   @color-white;
 
