--- a/src/Administration/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
+++ b/src/Administration/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
@@ -7,8 +7,6 @@
 
     .sw-media-grid__content {
         display: grid;
-        grid-column-gap: 15px;
-        grid-row-gap: 10px;
     }
 
     .sw-media-grid__presentation-small-preview {
